# rule-30

./: README.md  main.py  pyproject.toml
